--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@supabase/supabase-js": "^2.39.1",
     "@tanstack/react-query": "^5.14.6",
+    "@tanstack/react-query-devtools": "^5.15.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -17,8 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
