--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "antd": "^5.12.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
