--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-query": "^1.2.9",
     "antd": "^5.12.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
