--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.12.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,6 +55,7 @@
   },
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
+    "@types/lodash": "^4",
     "prettier": "^3.1.1"
   }
 }
